--- a/src/main/resources/templates/frontend/_Header.html
+++ b/src/main/resources/templates/frontend/_Header.html
@@ -63,8 +63,10 @@
                         <span th:text="#{topHeader.appointment}">Appointment</span>
                     </a>
                     <div class="language-switcher d-flex gap-1">
-        <a href="?lang=en" class="btn btn-sm btn-outline-light">EN</a>
-        <a href="?lang=ne" class="btn btn-sm btn-outline-light">ने</a>
+       
+         <a th:href="@{?lang=en}" th:classappend="${#locale.language == 'en'} ? 'btn btn-sm btn-secondary' : 'btn btn-sm btn-primary'">EN</a>
+                        <a th:href="@{?lang=ne}" th:classappend="${#locale.language == 'ne'} ? 'btn btn-sm btn-secondary' : 'btn btn-sm btn-primary'">ने</a>
+                  
     </div>
                 </div>
             </div>
@@ -77,8 +79,10 @@
             <div class="main-header-wrapper d-flex justify-content-between align-items-center">
                 <div class="site-logo">
                     <a href="./index.html">
-                        <img src="/assets/frontend/assets/image/gandhi-logo.png" th:alt="#{siteLogoAlt}" alt="Gandhi Hospital" />
-                    </a>
+<img src="/assets/frontend/assets/image/farWestLogo.png" 
+     th:alt="#{siteLogoAlt}" 
+     alt="Gandhi Hospital" 
+     style="height:auto; max-width:100px;"/>                    </a>
                 </div>
 
                 <div class="header-contact btn btn-sm btn-primary">
